# rwmod

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  run_tests.py  rwmod.iss  schemathesis.toml  start.bat  start_no_build.bat
.github/workflows/: ci.yml
frontend/: index.html  package.json  vite.config.ts
frontend/src/: api.ts  cmd.ts  main.ts  router.ts  store.ts  style.css  toast.ts  ui.ts  ws.ts
frontend/src/panels/: backup.ts  collection.ts  config.ts  dashboard.ts  download.ts  history.ts  import.ts  mods.ts  profiles.ts  queue.ts  rimsort.ts  saves.ts  search.ts  tags.ts  updates.ts
src/rwmod/: __init__.py  app_state.py  auth.py  autoupdate.py  backup.py  cache_db.py  cli.py  compatibility.py  config.py  database.py  deps.py  downloader.py  errors.py  i18n.py  load_order.py  logger.py  metadata.py  mod_cache.py  offline.py  parser.py  profile.py  py.typed  queue.py  rimpy_db.py  rimsort.py  save_parser.py  server.py  skymods.py  steamcmd.py  tags.py  utils.py  workshop.py
src/rwmod/models/: __init__.py  schemas.py
src/rwmod/routers/: auth.py  auto_update.py  backups.py  config.py  dashboard.py  download.py  health.py  history.py  metrics.py  mods.py  profiles.py  queue.py  rimsort.py  saves.py  tags.py  workshop.py
static/: index.html
tests/: conftest.py  test_api.py  test_backup.py  test_compatibility.py  test_config.py  test_database.py  test_downloader.py  test_errors.py  test_load_order.py  test_metadata.py  test_parser.py  test_queue_persistence.py  test_save_parser.py  test_steamcmd.py  test_tags.py  test_workshop.py
tools/: build_fe.py  build_frontend.py  fix_lint.py
