[project]
name = "rwmod"
version = "0.3.0"
description = "RimWorld Mod Manager — offline mod downloader & manager powered by SteamCMD"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "qxkt222"},
]
keywords = ["rimworld", "mod", "steam", "steamcmd", "workshop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.30",
    "typer>=0.25",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "websockets>=14",
]

[project.scripts]
rwmod = "rwmod.cli:app"
rwmod-web = "rwmod.server:app"

[project.urls]
Homepage = "https://github.com/qxkt222/rwmod"
Repository = "https://github.com/qxkt222/rwmod"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# B008: FastAPI Depends() in function defaults is idiomatic FastAPI
[tool.ruff.lint.per-file-ignores]
"src/rwmod/routers/*.py" = ["B008", "E501"]
"src/rwmod/cli.py" = ["B008", "E501"]
"src/rwmod/database.py" = ["E501"]
"tests/*.py" = ["E501", "B008", "SIM117"]

[tool.hatch.build.targets.wheel]
packages = ["src/rwmod"]

# ── pytest config ──────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --cov=rwmod --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests requiring network access",
]

# ── mypy config ────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["tests/", "build/", ".venv/"]
[[tool.mypy.overrides]]
module = ["rwmod.*"]
disallow_untyped_defs = true

# ── coverage config ────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/rwmod"]
omit = ["src/rwmod/routers/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# ── bandit config ──────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist", "node_modules"]
skips = ["B101"]  # skip assert check (used in tests)

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
